[project]
name = "c4-leaderboard-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "liqingge",email = "liqingge20000828@outlook.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "plotly (>=6.7.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
