[project]
name = "c4-leaderboard-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "liqingge",email = "liqingge20000828@outlook.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "plotly (>=6.7.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Application repo: no installable Python package layout. Streamlit Cloud runs
# `poetry install`, which otherwise fails with "No file/folder found for package".
[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "use-dict-literal",
    "too-many-lines",
]
